--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Quicksand";
+  color: #333;
+}
+
+html {
+  font-size: 62.5%;
+}
+@media (max-width: 30em) {
+  html {
+    font-size: 40%;
+  }
+}
+
+body {
+  font-size: 2rem;
+  color: #e9ecef;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+.todo {
+  margin: 20rem auto;
+  max-width: 60rem;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  padding: 3rem;
+}
+.todo h1 {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 1.6rem;
+}
+.todo__form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+  margin-bottom: 1.2rem;
+}
+.todo__form__input, .todo__form__submit {
+  padding: 1.6rem;
+  max-height: 2.4rem;
+  font-size: 2.4rem;
+}
+.todo__form__submit {
+  border: none;
+  background-color: #495057;
+  color: #cacaca;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.todo__form__submit:hover {
+  background-color: #f1356d;
+  color: white;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 4rem;
+}
+.nav .btn {
+  cursor: pointer;
+  background-color: white;
+  max-height: 2.4rem;
+  font-size: 2.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1.6rem 3.2rem;
+}
+.nav .btn--nav {
+  border: 1px solid white;
+}
+
+/* blog previews / list *//*# sourceMappingURL=index.css.map */
